library/src/libqstyleoption.h

typedef struct QStyleHintReturn QStyleHintReturn;
typedef struct QStyleOption QStyleOption;
typedef struct QStyleOptionComboBox QStyleOptionComboBox;
typedef struct QStyleOptionComplex QStyleOptionComplex;
typedef struct QStyleOptionGraphicsItem QStyleOptionGraphicsItem;
typedef struct QStyleOptionGroupBox QStyleOptionGroupBox;
typedef struct QStyleOptionRubberBand QStyleOptionRubberBand;
typedef struct QStyleOptionSizeGrip QStyleOptionSizeGrip;
typedef struct QStyleOptionSlider QStyleOptionSlider;
typedef struct QStyleOptionSpinBox QStyleOptionSpinBox;
typedef struct QStyleOptionTitleBar QStyleOptionTitleBar;
typedef struct QStyleOptionToolButton QStyleOptionToolButton;
typedef struct QTransform QTransform;
typedef struct QWidget QWidget;
QTLIBC_API void QStyleOption_InitFrom(QStyleOption* self, QWidget* w);
QTLIBC_API void QStyleOption_OperatorAssign(QStyleOption* self, QStyleOption* other);
QTLIBC_API QStyleOptionRubberBand* QStyleOptionRubberBand_new();
QTLIBC_API QStyleOptionRubberBand* QStyleOptionRubberBand_new2(QStyleOptionRubberBand* other);
QTLIBC_API void QStyleOptionRubberBand_Delete(QStyleOptionRubberBand* self);
QTLIBC_API QStyleOptionComplex* QStyleOptionComplex_new();
QTLIBC_API QStyleOptionComplex* QStyleOptionComplex_new2(QStyleOptionComplex* other);
QTLIBC_API QStyleOptionComplex* QStyleOptionComplex_new3(int version);
QTLIBC_API QStyleOptionComplex* QStyleOptionComplex_new4(int version, int typeVal);
QTLIBC_API void QStyleOptionComplex_Delete(QStyleOptionComplex* self);
QTLIBC_API QStyleOptionSlider* QStyleOptionSlider_new();
QTLIBC_API QStyleOptionSlider* QStyleOptionSlider_new2(QStyleOptionSlider* other);
QTLIBC_API void QStyleOptionSlider_Delete(QStyleOptionSlider* self);
QTLIBC_API QStyleOptionSpinBox* QStyleOptionSpinBox_new();
QTLIBC_API QStyleOptionSpinBox* QStyleOptionSpinBox_new2(QStyleOptionSpinBox* other);
QTLIBC_API void QStyleOptionSpinBox_Delete(QStyleOptionSpinBox* self);
QTLIBC_API QStyleOptionToolButton* QStyleOptionToolButton_new();
QTLIBC_API QStyleOptionToolButton* QStyleOptionToolButton_new2(QStyleOptionToolButton* other);
QTLIBC_API void QStyleOptionToolButton_Delete(QStyleOptionToolButton* self);
QTLIBC_API QStyleOptionComboBox* QStyleOptionComboBox_new();
QTLIBC_API QStyleOptionComboBox* QStyleOptionComboBox_new2(QStyleOptionComboBox* other);
QTLIBC_API void QStyleOptionComboBox_Delete(QStyleOptionComboBox* self);
QTLIBC_API QStyleOptionTitleBar* QStyleOptionTitleBar_new();
QTLIBC_API QStyleOptionTitleBar* QStyleOptionTitleBar_new2(QStyleOptionTitleBar* other);
QTLIBC_API void QStyleOptionTitleBar_Delete(QStyleOptionTitleBar* self);
QTLIBC_API QStyleOptionGroupBox* QStyleOptionGroupBox_new();
QTLIBC_API QStyleOptionGroupBox* QStyleOptionGroupBox_new2(QStyleOptionGroupBox* other);
QTLIBC_API void QStyleOptionGroupBox_Delete(QStyleOptionGroupBox* self);
QTLIBC_API QStyleOptionSizeGrip* QStyleOptionSizeGrip_new();
QTLIBC_API QStyleOptionSizeGrip* QStyleOptionSizeGrip_new2(QStyleOptionSizeGrip* other);
QTLIBC_API void QStyleOptionSizeGrip_Delete(QStyleOptionSizeGrip* self);
QTLIBC_API QStyleOptionGraphicsItem* QStyleOptionGraphicsItem_new();
QTLIBC_API QStyleOptionGraphicsItem* QStyleOptionGraphicsItem_new2(QStyleOptionGraphicsItem* other);
QTLIBC_API double QStyleOptionGraphicsItem_LevelOfDetailFromTransform(QTransform* worldTransform);
QTLIBC_API void QStyleOptionGraphicsItem_Delete(QStyleOptionGraphicsItem* self);
QTLIBC_API QStyleHintReturn* QStyleHintReturn_new();
QTLIBC_API void QStyleHintReturn_OperatorAssign(QStyleHintReturn* self, QStyleHintReturn* param1);
QTLIBC_API void QStyleHintReturn_Delete(QStyleHintReturn* self);