src/qt/libqstyleoption.bf

public interface IQStyleOptionRubberBand
{
	void* NativePtr { get; }
}
public class QStyleOptionRubberBand : IQStyleOptionRubberBand, IQStyleOption
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this()
	{
		this.nativePtr = CQt.QStyleOptionRubberBand_new();
	}
	
	public ~this()
	{
		CQt.QStyleOptionRubberBand_Delete(this.nativePtr);
	}
	
	public void InitFrom(IQWidget w)
	{
		CQt.QStyleOption_InitFrom(this.nativePtr, (w == null) ? null : (void*)w.NativePtr);
	}
	
	public void OperatorAssign(IQStyleOption other)
	{
		CQt.QStyleOption_OperatorAssign(this.nativePtr, (other == default) ? default : (void*)other.NativePtr);
	}
	
}
extension CQt
{
	[LinkName("QStyleOptionRubberBand_new")]
	public static extern void* QStyleOptionRubberBand_new();
	[LinkName("QStyleOptionRubberBand_new2")]
	public static extern void* QStyleOptionRubberBand_new2(void* other);
	/// Delete this object from C++ memory
	[LinkName("QStyleOptionRubberBand_Delete")]
	public static extern void QStyleOptionRubberBand_Delete(void* self);
}
public interface IQStyleOptionComplex
{
	void* NativePtr { get; }
}
public class QStyleOptionComplex : IQStyleOptionComplex, IQStyleOption
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this()
	{
		this.nativePtr = CQt.QStyleOptionComplex_new();
	}
	
	public ~this()
	{
		CQt.QStyleOptionComplex_Delete(this.nativePtr);
	}
	
	public void InitFrom(IQWidget w)
	{
		CQt.QStyleOption_InitFrom(this.nativePtr, (w == null) ? null : (void*)w.NativePtr);
	}
	
	public void OperatorAssign(IQStyleOption other)
	{
		CQt.QStyleOption_OperatorAssign(this.nativePtr, (other == default) ? default : (void*)other.NativePtr);
	}
	
}
extension CQt
{
	[LinkName("QStyleOptionComplex_new")]
	public static extern void* QStyleOptionComplex_new();
	[LinkName("QStyleOptionComplex_new2")]
	public static extern void* QStyleOptionComplex_new2(void* other);
	[LinkName("QStyleOptionComplex_new3")]
	public static extern void* QStyleOptionComplex_new3(int32 version);
	[LinkName("QStyleOptionComplex_new4")]
	public static extern void* QStyleOptionComplex_new4(int32 version, int32 typeVal);
	/// Delete this object from C++ memory
	[LinkName("QStyleOptionComplex_Delete")]
	public static extern void QStyleOptionComplex_Delete(void* self);
}
public interface IQStyleOptionSlider
{
	void* NativePtr { get; }
}
public class QStyleOptionSlider : IQStyleOptionSlider, IQStyleOptionComplex
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this()
	{
		this.nativePtr = CQt.QStyleOptionSlider_new();
	}
	
	public ~this()
	{
		CQt.QStyleOptionSlider_Delete(this.nativePtr);
	}
	
	public void InitFrom(IQWidget w)
	{
		CQt.QStyleOption_InitFrom(this.nativePtr, (w == null) ? null : (void*)w.NativePtr);
	}
	
	public void OperatorAssign(IQStyleOption other)
	{
		CQt.QStyleOption_OperatorAssign(this.nativePtr, (other == default) ? default : (void*)other.NativePtr);
	}
	
}
extension CQt
{
	[LinkName("QStyleOptionSlider_new")]
	public static extern void* QStyleOptionSlider_new();
	[LinkName("QStyleOptionSlider_new2")]
	public static extern void* QStyleOptionSlider_new2(void* other);
	/// Delete this object from C++ memory
	[LinkName("QStyleOptionSlider_Delete")]
	public static extern void QStyleOptionSlider_Delete(void* self);
}
public interface IQStyleOptionSpinBox
{
	void* NativePtr { get; }
}
public class QStyleOptionSpinBox : IQStyleOptionSpinBox, IQStyleOptionComplex
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this()
	{
		this.nativePtr = CQt.QStyleOptionSpinBox_new();
	}
	
	public ~this()
	{
		CQt.QStyleOptionSpinBox_Delete(this.nativePtr);
	}
	
	public void InitFrom(IQWidget w)
	{
		CQt.QStyleOption_InitFrom(this.nativePtr, (w == null) ? null : (void*)w.NativePtr);
	}
	
	public void OperatorAssign(IQStyleOption other)
	{
		CQt.QStyleOption_OperatorAssign(this.nativePtr, (other == default) ? default : (void*)other.NativePtr);
	}
	
}
extension CQt
{
	[LinkName("QStyleOptionSpinBox_new")]
	public static extern void* QStyleOptionSpinBox_new();
	[LinkName("QStyleOptionSpinBox_new2")]
	public static extern void* QStyleOptionSpinBox_new2(void* other);
	/// Delete this object from C++ memory
	[LinkName("QStyleOptionSpinBox_Delete")]
	public static extern void QStyleOptionSpinBox_Delete(void* self);
}
public interface IQStyleOptionToolButton
{
	void* NativePtr { get; }
}
public class QStyleOptionToolButton : IQStyleOptionToolButton, IQStyleOptionComplex
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this()
	{
		this.nativePtr = CQt.QStyleOptionToolButton_new();
	}
	
	public ~this()
	{
		CQt.QStyleOptionToolButton_Delete(this.nativePtr);
	}
	
	public void InitFrom(IQWidget w)
	{
		CQt.QStyleOption_InitFrom(this.nativePtr, (w == null) ? null : (void*)w.NativePtr);
	}
	
	public void OperatorAssign(IQStyleOption other)
	{
		CQt.QStyleOption_OperatorAssign(this.nativePtr, (other == default) ? default : (void*)other.NativePtr);
	}
	
}
extension CQt
{
	[LinkName("QStyleOptionToolButton_new")]
	public static extern void* QStyleOptionToolButton_new();
	[LinkName("QStyleOptionToolButton_new2")]
	public static extern void* QStyleOptionToolButton_new2(void* other);
	/// Delete this object from C++ memory
	[LinkName("QStyleOptionToolButton_Delete")]
	public static extern void QStyleOptionToolButton_Delete(void* self);
}
public interface IQStyleOptionComboBox
{
	void* NativePtr { get; }
}
public class QStyleOptionComboBox : IQStyleOptionComboBox, IQStyleOptionComplex
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this()
	{
		this.nativePtr = CQt.QStyleOptionComboBox_new();
	}
	
	public ~this()
	{
		CQt.QStyleOptionComboBox_Delete(this.nativePtr);
	}
	
	public void InitFrom(IQWidget w)
	{
		CQt.QStyleOption_InitFrom(this.nativePtr, (w == null) ? null : (void*)w.NativePtr);
	}
	
	public void OperatorAssign(IQStyleOption other)
	{
		CQt.QStyleOption_OperatorAssign(this.nativePtr, (other == default) ? default : (void*)other.NativePtr);
	}
	
}
extension CQt
{
	[LinkName("QStyleOptionComboBox_new")]
	public static extern void* QStyleOptionComboBox_new();
	[LinkName("QStyleOptionComboBox_new2")]
	public static extern void* QStyleOptionComboBox_new2(void* other);
	/// Delete this object from C++ memory
	[LinkName("QStyleOptionComboBox_Delete")]
	public static extern void QStyleOptionComboBox_Delete(void* self);
}
public interface IQStyleOptionTitleBar
{
	void* NativePtr { get; }
}
public class QStyleOptionTitleBar : IQStyleOptionTitleBar, IQStyleOptionComplex
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this()
	{
		this.nativePtr = CQt.QStyleOptionTitleBar_new();
	}
	
	public ~this()
	{
		CQt.QStyleOptionTitleBar_Delete(this.nativePtr);
	}
	
	public void InitFrom(IQWidget w)
	{
		CQt.QStyleOption_InitFrom(this.nativePtr, (w == null) ? null : (void*)w.NativePtr);
	}
	
	public void OperatorAssign(IQStyleOption other)
	{
		CQt.QStyleOption_OperatorAssign(this.nativePtr, (other == default) ? default : (void*)other.NativePtr);
	}
	
}
extension CQt
{
	[LinkName("QStyleOptionTitleBar_new")]
	public static extern void* QStyleOptionTitleBar_new();
	[LinkName("QStyleOptionTitleBar_new2")]
	public static extern void* QStyleOptionTitleBar_new2(void* other);
	/// Delete this object from C++ memory
	[LinkName("QStyleOptionTitleBar_Delete")]
	public static extern void QStyleOptionTitleBar_Delete(void* self);
}
public interface IQStyleOptionGroupBox
{
	void* NativePtr { get; }
}
public class QStyleOptionGroupBox : IQStyleOptionGroupBox, IQStyleOptionComplex
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this()
	{
		this.nativePtr = CQt.QStyleOptionGroupBox_new();
	}
	
	public ~this()
	{
		CQt.QStyleOptionGroupBox_Delete(this.nativePtr);
	}
	
	public void InitFrom(IQWidget w)
	{
		CQt.QStyleOption_InitFrom(this.nativePtr, (w == null) ? null : (void*)w.NativePtr);
	}
	
	public void OperatorAssign(IQStyleOption other)
	{
		CQt.QStyleOption_OperatorAssign(this.nativePtr, (other == default) ? default : (void*)other.NativePtr);
	}
	
}
extension CQt
{
	[LinkName("QStyleOptionGroupBox_new")]
	public static extern void* QStyleOptionGroupBox_new();
	[LinkName("QStyleOptionGroupBox_new2")]
	public static extern void* QStyleOptionGroupBox_new2(void* other);
	/// Delete this object from C++ memory
	[LinkName("QStyleOptionGroupBox_Delete")]
	public static extern void QStyleOptionGroupBox_Delete(void* self);
}
public interface IQStyleOptionSizeGrip
{
	void* NativePtr { get; }
}
public class QStyleOptionSizeGrip : IQStyleOptionSizeGrip, IQStyleOptionComplex
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this()
	{
		this.nativePtr = CQt.QStyleOptionSizeGrip_new();
	}
	
	public ~this()
	{
		CQt.QStyleOptionSizeGrip_Delete(this.nativePtr);
	}
	
	public void InitFrom(IQWidget w)
	{
		CQt.QStyleOption_InitFrom(this.nativePtr, (w == null) ? null : (void*)w.NativePtr);
	}
	
	public void OperatorAssign(IQStyleOption other)
	{
		CQt.QStyleOption_OperatorAssign(this.nativePtr, (other == default) ? default : (void*)other.NativePtr);
	}
	
}
extension CQt
{
	[LinkName("QStyleOptionSizeGrip_new")]
	public static extern void* QStyleOptionSizeGrip_new();
	[LinkName("QStyleOptionSizeGrip_new2")]
	public static extern void* QStyleOptionSizeGrip_new2(void* other);
	/// Delete this object from C++ memory
	[LinkName("QStyleOptionSizeGrip_Delete")]
	public static extern void QStyleOptionSizeGrip_Delete(void* self);
}
public interface IQStyleOptionGraphicsItem
{
	void* NativePtr { get; }
}
public class QStyleOptionGraphicsItem : IQStyleOptionGraphicsItem, IQStyleOption
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this()
	{
		this.nativePtr = CQt.QStyleOptionGraphicsItem_new();
	}
	
	public ~this()
	{
		CQt.QStyleOptionGraphicsItem_Delete(this.nativePtr);
	}
	
	public static double LevelOfDetailFromTransform(IQTransform worldTransform)
	{
		return CQt.QStyleOptionGraphicsItem_LevelOfDetailFromTransform((worldTransform == default) ? default : (void*)worldTransform.NativePtr);
	}
	
	public void InitFrom(IQWidget w)
	{
		CQt.QStyleOption_InitFrom(this.nativePtr, (w == null) ? null : (void*)w.NativePtr);
	}
	
	public void OperatorAssign(IQStyleOption other)
	{
		CQt.QStyleOption_OperatorAssign(this.nativePtr, (other == default) ? default : (void*)other.NativePtr);
	}
	
}
extension CQt
{
	[LinkName("QStyleOptionGraphicsItem_new")]
	public static extern void* QStyleOptionGraphicsItem_new();
	[LinkName("QStyleOptionGraphicsItem_new2")]
	public static extern void* QStyleOptionGraphicsItem_new2(void* other);
	[LinkName("QStyleOptionGraphicsItem_LevelOfDetailFromTransform")]
	public static extern double QStyleOptionGraphicsItem_LevelOfDetailFromTransform(void* worldTransform);
	/// Delete this object from C++ memory
	[LinkName("QStyleOptionGraphicsItem_Delete")]
	public static extern void QStyleOptionGraphicsItem_Delete(void* self);
}
public interface IQStyleHintReturn
{
	void* NativePtr { get; }
}
public class QStyleHintReturn : IQStyleHintReturn
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this()
	{
		this.nativePtr = CQt.QStyleHintReturn_new();
	}
	
	public ~this()
	{
		CQt.QStyleHintReturn_Delete(this.nativePtr);
	}
	
	public void OperatorAssign(IQStyleHintReturn param1)
	{
		CQt.QStyleHintReturn_OperatorAssign(this.nativePtr, (param1 == default) ? default : (void*)param1.NativePtr);
	}
	
}
